<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/objectNameEdit"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="70dp"
        android:background="@color/teal_200"
        android:inputType="text"
        android:hint="@string/editName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/objectDetailsEdit"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:background="@color/teal_700"
        android:inputType="text"
        android:hint="@string/editDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objectNameEdit" />

    <Button
        android:id="@+id/Confirm"
        android:layout_width="143dp"
        android:layout_height="107dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="90dp"
        android:text="@string/Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="143dp"
        android:layout_height="107dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:text="@string/Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>